clarify proxy terms
VA.gov has a reverse proxy for web traffic and a forward proxy to VA service traffic.

Co-authored-by: Rian Fowler <rian.fowler@adhocteam.us>

--- a/packages/documentation/src/pages/getting-started/common-tasks/routing.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/routing.mdx
@@ -1,6 +1,6 @@
 # Routing
 
-## Proxy Config
+## Reverse Proxy Config
 
 The proxy handles incoming URL requests to va.gov and is managed through a [proxy config](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/revproxy-vagov/vars/react_routes.yml) file.
 
@@ -37,7 +37,6 @@ To redirect from one URL to another, use the `redirects` section with a `src`, `
     dest: /coronavirus-veteran-frequently-asked-questions/
     matcher: "~*"
 ```  
-
 
 
 
