explain default url mapping
Co-authored-by: Rian Fowler <rian.fowler@adhocteam.us>

--- a/packages/documentation/src/pages/getting-started/common-tasks/routing.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/routing.mdx
@@ -13,7 +13,7 @@ For example, a React app running at `www.va.gov/appPath` would need this added:
   - path: /appPath
     protected: no
 ```
-
+By default, one url path maps to one document. This configuration changes the default behavior so that any additional path parts after `/appPath` like `/appPath/IntroductionPage` will return the document at `/appPath`.
 
 ## Redirects
 
@@ -37,6 +37,5 @@ To redirect from one URL to another, use the `redirects` section with a `src`, `
     dest: /coronavirus-veteran-frequently-asked-questions/
     matcher: "~*"
 ```  
-
 
 
