specify that this config is for routing
Co-authored-by: Rian Fowler <rian.fowler@adhocteam.us>

--- a/packages/documentation/src/pages/getting-started/common-tasks/routing.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/routing.mdx
@@ -2,7 +2,7 @@
 
 ## Reverse Proxy Config
 
-The proxy handles incoming URL requests to va.gov and is managed through a [proxy config](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/revproxy-vagov/vars/react_routes.yml) file.
+The reverse proxy handles incoming URL requests to va.gov and is managed through a [reverse proxy routing config](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/revproxy-vagov/vars/react_routes.yml) file.
 
 ## React Router
 
@@ -37,4 +37,3 @@ To redirect from one URL to another, use the `redirects` section with a `src`, `
     dest: /coronavirus-veteran-frequently-asked-questions/
     matcher: "~*"
 ```  
-
