Remove instructions to avoid confusion

--- a/packages/documentation/src/pages/getting-started/internal-tools.mdx
+++ b/packages/documentation/src/pages/getting-started/internal-tools.mdx
@@ -8,199 +8,4 @@ tags: SOCKS proxy, Jenkins, Sentry, Grafana, SwitchyOmega
 
 **This content/page is no longer maintained and likely outdated.**
 
-*[Please see the most current documentation in the va.gov-team repo.](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/engineering/internal-tools.md)*
-
-
-
-
-These instructions cover the configuration of a SOCKS proxy necessary for access to:
-
-* Static `vets-website` content
-* Remote build logs for pull requests and deployments (Jenkins)
-* System metrics for diagnostic/troubleshooting purposes
-* Exception reports and tracebacks
-
-## Prerequisites and assumptions
-
-- These steps assume you're running on Linux or OSX.
-- That you have a Github account that's [configured](https://help.github.com/en/articles/adding-a-new-ssh-key-to-your-github-account) to use `.ssh` authentication with one of your computer's public keys.
-
-## Create an SSH public key
-
-*You can skip to* **Configure the SOCKS proxy** *if you have a public ssh key you want to use. These instructions refer to the public key as `id_rsa_vagov.pub`*
-
-1. Open a terminal and create an `~/.ssh` directory
-```bash
-mkdir ~/.ssh
-```
-*It's safe to ignore the error if this directory already exists*
-
-2. Set the `~/.ssh` directory to read only.
-```bash
-chmod 700 ~/.ssh
-```
-
-3. Change to the `~/.ssh` directory
-
-```bash
-cd ~/.ssh
-```
-
-4. Generate the ssh keys. You will be prompted to enter a secure passphrase to protect your private key.
-
-```bash
-ssh-keygen -f id_rsa_vagov
-```
-5. Confirm that the keys were generated.
-
-```bash
-ls ~/.ssh
-```
-*The list of files should include `id_rsa_vagov` and `id_rsa_vagov.pub`. Only share keys with `.pub` (public) extension; Private keys should never leave your computer.*
-
-*Once the keys are verified, continue with* **Configure the SOCKS proxy**
-
-## Configure the SOCKS proxy
-Below are configuration instructions for internal or external developers.
-
-### For internal developers
-
-1. Create an issue in the va.gov-team repo using the issue template named "Environment Access Request Template" which can be found [here](https://github.com/department-of-veterans-affairs/va.gov-team/issues/new?assignees=&labels=external-request%2C+operations&template=Environment-Access-Request-Template.md&title=Access+for+%5Bindividual%5D). In filling out the template you will provide your public ssh key.
-
-2. Once approval has been verified and this is reflected on the issue you created, your public key will be added to the devops repo which will give you access to the internal tools.
-
-3. Copy the SSH [config](https://github.com/department-of-veterans-affairs/devops/blob/master/ssh/config) from the `devops` repo to `~/.ssh`
-```bash
-cp ./ssh/config ~/.ssh/config
-```
-
-4. Add your SSH key to your local agent
-```bash
-ssh-add -K ~/.ssh/id_rsa_vagov
-```
-*If you're on OSX you can configure the ssh client to automatically add your keys with the by adding the following to the top of `~/.ssh/config`*
-```
-  Host *
-    AddKeysToAgent yes
-    UseKeychain yes
-    IdentityFile ~/.ssh/id_rsa_vagov
-```
-
-*Once your public key has been added to the devops repo, an update job should automatically run to update the jumpboxes and SOCKS proxy endpoints. This job takes about 5 minutes to run. Wait five minutes, then continue with* **Starting the SOCKS proxy**.
-
-### For external developers
-
-1. As part of onboarding, you should have provided your **public SSH key** to DSVA. If you haven't, do that now.
-2. DSVA will add your public SSH key to the list of authorized keys.
-3. When that process is completed (24 hours), you will receive a Github notification that your key has been added.
-
-*Once you receive the notification, continue with* **Starting the SOCKS proxy**.
-
-## Starting the SOCKS proxy
-There are slightly different commands to connect to the proxy depending on whether you are connected to the VA network or not. The `~/.ssh/config` file on your local system contains configuration to access the SOCKS proxy both from the VA network and the internet.
-
-- If you're on the VA network, run:
-
-  ```bash
-  ssh socks-va -D 2001 -N &
-  ```
-
-- If you're on the internet (outside the VA network), run:
-
-  ```bash
-  ssh socks -D 2001 -N &
-  ```
-
-- Alternatively, if you have the `devops` repo cloned on your device, add the following alias:
-
-  ```bash
-  alias socks=~/path_to_repo/devops/utilities/socks.sh
-  ```
-
-  then use `socks on` or `socks off` to toggle.
-
-**Note**: _The first time you connect to the jumpbox, ssh will prompt to ask if you are sure you want to connect to a new host. You will be unable to respond "yes" if ssh is in the background, so either bring it to the foreground with `fg` or omit the `&` character from the above command._
-
-_After running the command below, continue to_ **Testing and Using thje SOCKS proxy**
-
-## Test the SOCKS proxy conneciton is working
-
-- `curl` sentry, a tool available only on through the SOCKS proxy
-```bash
-$ curl -v --proxy socks5h://127.0.0.1:2001 sentry.vetsgov-internal
-```
-
-*Verify that the output includes `HTTP/1.1 302 FOUND`. If not, check that the
-SOCKS proxy server is running. You can `$ nc -z 127.0.0.1 2001` as a first step.*
-
-## Install browser extensions
-These instructions cover installing and configuring browser extensions used to connect to `vetsgov-internal` via the SOCKS proxy.
-
-### Chrome
-
-1. Install Proxy SwitchyOmega
-
-   https://chrome.google.com/webstore/detail/proxy-switchyomega/padekgcemlokbadohgkifijomclgjgif
-
-1. Configure the `proxy` profile like this:
-
-   ![](../../images/internal-tools/switchy-omega-config-1.png)
-
-1. Configure the `auto switch` profile like this:
-
-   ![](../../images/internal-tools/switchy-omega-config-2.png)
-
-1. In Chrome's menu bar, click on the proxy app and change the setting to 'auto switch':
-
-   ![](../../images/internal-tools/switch-omega-auto-switch.png)
-
-1. Be sure to hit the Apply Changes button to save your changes!
-
-   ![](../../images/internal-tools/switchy-omega-config-3.png)
-
-1. NOTE: You may have to uncheck a settings flag in Chrome, see
-
-   https://github.com/FelisCatus/SwitchyOmega/wiki/DNS-and-SOCKS-proxy
-
-1. Check your connection by navigating to Sentry at
-   http://sentry.vetsgov-internal.
-
-### Firefox
-
-1. Install Proxy Switcher
-   https://addons.mozilla.org/en-US/firefox/addon/proxy-switcher/
-1. create a file on your system with the following contents
-    ```
-    function FindProxyForURL(url, host) {
-		     if( /.*\.vetsgov-internal$/.test(host) ) {
-    		 	 return 'SOCKS5 localhost:2001';
-		     }
-    		 return 'DIRECT';
-    }
-    ```
-1. Configure the `automatic` tab by setting the path to be the file created above
-1. Press the reload button in the proxy switcher configuration dialog
-1. Check your connection by navigating to Sentry at
-   http://sentry.vetsgov-internal.
-
-## Issues
-If your key doesn't seem to be working, contact the Platform team in the *#vetsgov-devops* Slack channel.
-
-## Tools
-
-### Jenkins
-With the Socks proxy set up and running, go to http://jenkins.vetsgov-internal. You can see the builds without logging in, but will need to authenticate (with GitHub) to re-run failed builds.
-
-### Sentry
-
-With the Socks proxy set up and running, go to http://sentry.vetsgov-internal. You will need to register for Sentry, but after creating any username/password, you will have access. We do not really use Sentry teams except to separate production, staging, and dev errors. To view the most recent production errors, which is the most common thing to do while on call, go to http://sentry.vetsgov-internal/vets-gov/platform-api-production/
-
-### Grafana
-With the Socks proxy set up and running, go to http://grafana.vetsgov-internal. You will need to register for Grafana, but after creating any username/password, you will have access.
-
-There are many dashboards and you should click around to get familiar with the variety of metrics being collected and visualized (make sure Data Source is set to Production). A few highlights are:
-
-- [Site](http://grafana.vetsgov-internal/dashboard/db/site) to see overall metrics about the health of the site
-- [External Service Status](http://grafana.vetsgov-internal/dashboard/db/external-service-status) to see the availability of the services vets.gov depends on.
-- [RDS](http://grafana.vetsgov-internal/dashboard/db/rds) to see the database statistics.
-- [Rev Proxy](http://grafana.vetsgov-internal/dashboard/db/revproxy) to see metrics on the reverse proxies.
+*[See the most current documentation in the va.gov-team repo.](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/engineering/internal-tools.md)*
