--- a/packages/documentation/src/pages/forms/index.mdx
+++ b/packages/documentation/src/pages/forms/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: VA Forms System
+title: VA Forms Library
 tags: overview
 ---
 
-# VA.gov Forms System
+# VA.gov Forms Library
 
-The VA.gov Forms System (VAFS) provides a simple way to create a consistent experience for complex forms for Veterans. Applications created with this framework generally follow this flow:
+The VA.gov Forms Library provides a simple way to create a consistent experience for complex forms for Veterans. Applications created with this framework generally follow this flow:
 
 ```mermaid
 graph LR
@@ -14,7 +14,7 @@ graph LR
     C -- Submission --> D(Confirmation Page)
 ```
 
-VAFS consists of several different pieces:
+The forms library consists of several different pieces:
 
 - Standardized **inputs and field sets** for common types of form data
 - **Validation functions** used for commonly collected types of data
@@ -22,16 +22,17 @@ VAFS consists of several different pieces:
 - Hooks for custom validation, hiding/showing fields, and writing custom fields and widgets
 - Save and restore form data using the VA.gov save in progress and prefill APIs
 
-## When to use VAFS
+## When to use the forms library
 
-VAFS is best suited for forms that
+Forms library is best suited for forms that
 
 - are long enough to be organized across multiple pages,
 - have optionally captured or required fields, and
 - require field level or multiple field validation.
 
-VAFS shouldn't be used when
+Forms library shouldn't be used when
+
 - the form is simple enough to fit on a single page, or
 - when the user experience doesn't benefit from **all** of the steps documented in the above flow.
 
-In these cases, it's recommended to either make simple single page form or to deploy a React app that doesn't use VAFS. We have form components available in the formation-react library, which can view [here](/platform).
+In these cases, it's recommended to either make simple single page form or to deploy a React app that doesn't use the forms library. We have form components available in the formation-react library, which can view [here](/platform).
