--- a/packages/documentation/src/pages/forms/index.mdx
+++ b/packages/documentation/src/pages/forms/index.mdx
@@ -24,7 +24,7 @@ The forms library consists of several different pieces:
 
 ## When to use the forms library
 
-Forms library is best suited for forms that
+The forms library is best suited for forms that
 
 - are long enough to be organized across multiple pages,
 - have optionally captured or required fields, and
