--- a/packages/documentation/src/pages/forms/index.mdx
+++ b/packages/documentation/src/pages/forms/index.mdx
@@ -30,7 +30,7 @@ The forms library is best suited for forms that
 - have optionally captured or required fields, and
 - require field level or multiple field validation.
 
-Forms library shouldn't be used when
+The forms library shouldn't be used when
 
 - the form is simple enough to fit on a single page, or
 - when the user experience doesn't benefit from **all** of the steps documented in the above flow.
