Add save-in-progress modal docs

--- a/packages/documentation/src/pages/forms/forms-in-production.mdx
+++ b/packages/documentation/src/pages/forms/forms-in-production.mdx
@@ -5,7 +5,7 @@ tags: updating schema, migrations
 
 # Forms in production
 
-Previous: [Setting up Save in Progress](./forms/save-in-progress)
+Previous: [Using the Save in Progress menu](./forms/save-in-progress-menu)
 
 Now that you have a form in production, making future changes requires some extra care.
 
