--- a/packages/documentation/src/pages/forms/save-in-progress.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress.mdx
@@ -81,4 +81,4 @@ Once you've got all that set up, your form should appear on the profile page:
 
 ![](../../images/forms/saved_form.png)
 
-Next: [Forms in production](/forms/forms-in-production)
+Next: [Using the Save in Progress menu](/forms/save-in-progress-menu)
