--- a/packages/documentation/src/pages/forms/save-in-progress-menu.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress-menu.mdx
@@ -137,7 +137,7 @@ this file and paste it into the menu form data (as-is) to apply this data
 - After pasting in the complete form data into the textarea, use the "Replace" button to completely replace the form data. Using "Merge" would also
 work, but may not remove unrelated data.
 
-### <a name=edit-the-data-without-being-on-a-specific-page"" aria-hidden="true">Edit the data without being on a specific page</a>
+### <a name="edit-the-data-without-being-on-a-specific-page" aria-hidden="true">Edit the data without being on a specific page</a>
 
 Within the save-in-progress menu, the textarea containing the "Form data" is editable. This would allow you to edit data in-place
 
