Two more issues

--- a/packages/documentation/src/pages/forms/save-in-progress-menu.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress-menu.mdx
@@ -62,7 +62,7 @@ If you don't see the "Open save-in-progress menu" link:
   required hash will look like this - `#dev-on` - add it to the end of the url
 - Press <kbd>Enter</kbd> on the keyboard. The link will immediately show up.
 
-<img width="513" alt="Add `#dev-on` hash shows link" src="../../images/forms/sips-menu-link.png">
+<img width="513" alt="Add `#dev-on` hash shows link" src="../../images/forms/sips-menu-link.png" />
 
 ### Deactivate
 
@@ -75,7 +75,7 @@ To hide the link:
   If the menu is open, it will also disappear, but may automatically reappear
   if immediately re-activated.
 
-<img width="528" alt="Add `#dev-off` hash hides link" src="../../images/forms/sips-menu-no-link.png">
+<img width="528" alt="Add `#dev-off` hash hides link" src="../../images/forms/sips-menu-no-link.png" />
 
 ## Buttons
 
