--- a/packages/documentation/src/pages/forms/save-in-progress-menu.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress-menu.mdx
@@ -22,11 +22,11 @@ This save-in-progress menu will allow you to:
     - [Replace versus merge button](#replace-versus-merge-button)
       - [Replace](#replace)
       - [Merge](#merge)
-    - [<a name="copy-and-paste-in-predefined-form-data" aria-hidden="true">Copy and paste in predefined form data</a>](#copy-and-paste-in-predefined-form-data)
-    - [<a name="edit-the-data-without-being-on-a-specific-page" aria-hidden="true">Edit the data without being on a specific page</a>](#edit-the-data-without-being-on-a-specific-page)
-    - [<a name="add-missing-data-without-needing-to-include-all-the-form-data" aria-hidden="true">Add missing data without needing to include all the form data</a>](#add-missing-data-without-needing-to-include-all-the-form-data)
+    - [Copy and paste in predefined form data](#copy-and-paste-in-predefined-form-data)
+    - [Edit the data without being on a specific page](#edit-the-data-without-being-on-a-specific-page)
+    - [Add missing data without needing to include all the form data](#add-missing-data-without-needing-to-include-all-the-form-data)
   - [Return url](#return-url)
-    - [<a name="jump-to-a-specific-page-within-the-form" aria-hidden="true">Jump to a specific page within the form</a>](#jump-to-a-specific-page-within-the-form)
+    - [Jump to a specific page within the form](#jump-to-a-specific-page-within-the-form)
 
 <img width="506" alt="save-in-progress menu" src="../../images/forms/sips-menu.png" />
 
@@ -110,7 +110,7 @@ complete data, i.e. merge a partial bit of data into the full data set. A more
 specific example is shared in the [add missing data without needing to include
 _all_ the form data](#add-missing-data-without-needing-to-include-all-the-form-data) section.
 
-### <a name="copy-and-paste-in-predefined-form-data" aria-hidden="true">Copy and paste in predefined form data</a>
+### Copy and paste in predefined form data
 
 Most forms include a `maximal-test.json` file for testing. Copy the content of
 this file and paste it into the menu form data (as-is) to apply this data
@@ -147,7 +147,7 @@ this file and paste it into the menu form data (as-is) to apply this data
 - After pasting in the complete form data into the textarea, use the "Replace" button to completely replace the form data. Using "Merge" would also
 work, but may not remove unrelated data.
 
-### <a name="edit-the-data-without-being-on-a-specific-page" aria-hidden="true">Edit the data without being on a specific page</a>
+### Edit the data without being on a specific page
 
 Within the save-in-progress menu, the textarea containing the "Form data" is editable. This would allow you to edit data in-place
 
@@ -155,7 +155,7 @@ Within the save-in-progress menu, the textarea containing the "Form data" is edi
 
 Edit the value, then use the "Replace" button.
 
-### <a name="add-missing-data-without-needing-to-include-all-the-form-data" aria-hidden="true">Add missing data without needing to include all the form data</a>
+### Add missing data without needing to include all the form data
 
 For example, if you only want to update the "relationship" field, even without
 being on that page, add the following snippet:
@@ -180,7 +180,7 @@ a more optimal solution is found.
 
 <img width="387" alt="Return url select" src="../../images/forms/sips-menu-return-url.png" />
 
-### <a name="jump-to-a-specific-page-within-the-form" aria-hidden="true">Jump to a specific page within the form</a>
+### Jump to a specific page within the form
 
 - The select will only show the active pages based on the choices in the form
   data.
