Create initial boilerplate for additional TTY numbers

--- a/packages/formation-react/src/components/Telephone/Telephone.mdx
+++ b/packages/formation-react/src/components/Telephone/Telephone.mdx
@@ -126,12 +126,13 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 |:----|:-------|:------------|
 | `222_VETS` | `8772228387` | VA Help Line |
 | `4AID_VET` | `8774243838` | National Call Center for Homeless Veterans |
+| `711` | `711` | TTY |
 | `911` | `911` | Emergency! |
 | `CAREGIVER` | `8552603274` | VA National Caregiver Support Line |
 | `CRISIS_LINE` | `8002738255` | Veterans Crisis hotline |
 | `CRISIS_TTY` | `8007994889` | Veterans Crisis hotline TTY |
-| `DS_LOGON` | `8005389552` | Defense Manpower Data Center |
 | `DS_LOGON_TTY` | `8663632883` | Defense Manpower Data Center TTY |
+| `DS_LOGON` | `8005389552` | Defense Manpower Data Center |
 | `GI_BILL` | `8884424551` | Education Call Center (1-888-GI-BILL-1) |
 | `GO_DIRECT` | `8003331795` | Go Direct/Direct Express (Treasury) |
 | `HELP_DESK` | `8555747286` | VA Help desk |
@@ -139,6 +140,10 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 | `MY_HEALTHEVET` | `8773270022` | My HealtheVet help desk |
 | `NCA` | `8005351117` | National Cemetery Scheduling Office |
 | `TESC` | `8882242950` | U.S. Treasury Electronic Payment Solution Center |
+| `TTY_1` | `8008773399` | VA TTY |
+| `TTY_2` | `8008778339` | VA TTY |
+| `TTY_3` | `8007994889` | VA TTY |
+| `TTY_4` | `8663632883` | VA TTY |
 | `VA_311` | `8446982311` | VA Help desk (VA311) |
 | `VA_BENEFITS` | `8008271000` | Veterans Benefits Assistance |
 
