--- a/packages/documentation/src/pages/forms/uischema.mdx
+++ b/packages/documentation/src/pages/forms/uischema.mdx
@@ -277,6 +277,19 @@ The `ui:validations` property is an array of validation functions or objects tha
 
 ```
 
+This property is added to a form field level. It will validate isolated form field data.
+```js
+{
+  validator: (errors, pageData) => {
+    const { email, confirmEmail } = pageData;
+    if (email !== confirmEmail) {
+      errors.confirmEmail.addError('Please ensure your entries match');
+    }
+  }
+}
+```
+
+
 ### ui:errorMessages
 An object with field-specific error messages, `ui:errorMessages` is structured by error name (from JSON Schema error types). This property is passed to custom validations in `ui:validations` in order to allow configurable error messages in a validator.
 
@@ -392,6 +405,7 @@ updateSchema: function (formData, schema, uiSchema, index, pathToCurrentData)
 ```
 
 This function returns an object with the properties you want to update. Instead of replacing the existing schema, it updates the individual properties.
+
 ```js
 updateSchema: function (formData, schema, uiSchema, index, pathToCurrentData) {
       return {
@@ -399,6 +413,33 @@ updateSchema: function (formData, schema, uiSchema, index, pathToCurrentData) {
       };
     },
 ```
+
+In the following example, the available options in a dropdown menu are changed. The function only updates the `enum` and the `enumNames` keys — it will not replace or delete the other keys.
+
+```js
+const optionsGroup1 = { 
+          enum: ['option1', 'option2'],
+          enumNames: ['Option 1', 'Option 2']
+};
+const optionsGroup2 = { 
+          enum: ['option1', 'option3'],
+          enumNames: ['Option 1', 'Option 3']
+};
+
+// schema
+{
+  'ui:options': {
+    updateSchema: (form, pageSchema) {
+      if (form.myField === 'otherOption') {
+        return optionsGroup1;
+      } else {
+        return optionsGroup2;
+      }
+    }
+  }
+}
+```
+
 
 ### keepInPageOnReview
 By default, array fields that are displayed on a single page in a form, such as information for multiple dependents, are displayed in a separate section on the review page. To keep the information in a single section on a review page, set this property to `true`.
