--- a/packages/documentation/src/pages/forms/available-widgets.mdx
+++ b/packages/documentation/src/pages/forms/available-widgets.mdx
@@ -38,77 +38,77 @@ Available widgets are:
 - [TextWidget](#textwidget)
 - [YesNoWidget](#yesnowidget)
 
-## `ArrayCountWidget`
+## ArrayCountWidget
 
 Renders a `<input type="number">` HTML element, and is used when determining how many times a group of questions should be rendered. For more information about grouping common questions, see "[Sequential duplicate form groups](/forms/available-features-and-usage-guidelines#sequential-duplicate-form-groups)."
 
 - **File:** [ArrayCountWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/ArrayCountWidget.jsx)
 - **Usage:** In the `uiSchema`, specify `'ui:widget': ArrayCountWidget` for the given field.
 
-## `CheckboxWidget`
+## CheckboxWidget
 
 Renders a single `<input type="checkbox">` HTML element. For information about rendering multiple checkboxes together, see "[Checkbox Group](/forms/available-features-and-usage-guidelines#checkbox-group)."
 
 - **File:** [CheckboxWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/CheckboxWidget.jsx)
 - **Usage:** Usually the `CheckboxWidget` is not specified directly in the `uiSchema` because it renders by default for a schema that specifies `type: 'boolean'`.
 
-## `CurrencyWidget`
+## CurrencyWidget
 
 Renders a `<input>` HTML element with some additional logic to handle parsing currency inputs.
 
 - **File:** [CurrencyWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/CurrencyWidget.jsx)
 - **Usage:** In the `uiSchema`, specify `'ui:widget': CurrencyWidget` for the given field.
 
-## `DateWidget`
+## DateWidget
 
 Renders three separate fields for dates, two `<select>` elements for month and day and one `<input>` element for the year.
 
 - **File:** [DateWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/DateWidget.jsx)
 - **Usage:** In the `uiSchema`, specify `'ui:widget': 'date'` for the given field.
 
-## `EmailWidget`
+## EmailWidget
 
 Renders a `TextWidget` with the `type: "email"` passed to the `<input>` element.
 
 - **File:** [EmailWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/EmailWidget.jsx)
 - **Usage:** In the `uiSchema`, specify `'ui:widget': 'email'` for the given field.
 
-## `PhoneNumberWidget`
+## PhoneNumberWidget
 
 Renders a `TextWidget` with additional logic to strip non-numeric characters from the input before saving the input.
 
 - **File:** [PhoneNumberWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/PhoneNumberWidget.jsx)
 - **Usage:** In the `uiSchema`, specify `'ui:widget': PhoneNumberWidget` for the given field.
 
-## `RadioWidget`
+## RadioWidget
 
 Renders a single radio button for each `enum` value. This overrides the default `SelectWidget` that is normally rendered where `enum` exists.
 
 - **File:** [RadioWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/RadioWidget.jsx)
 - **Usage:** In the `uiSchema`, specify `'ui:widget': 'radio'` for the given field. Usually used with `'ui:options': { labels: {}}` so you can specify the label for each radio button. To see a code example, refer to [radio button group in form features](/forms/available-features-and-usage-guidelines#radio-button-group).
 
-## `SelectWidget`
+## SelectWidget
 
 Renders a `<select>` HTML element. This is the default widget for data of `type: 'string'` with an `enum` property.
 
 - **File:** [SelectWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/SelectWidget.jsx)
 - **Usage:** Usually the `SelectWidget` is not specified directly in the `uiSchema` because it renders by default for a schema that specifies `type: 'string'` with an `enum` property.
 
-## `SSNWidget`
+## SSNWidget
 
 Renders a `TextWidget` with additional logic to strip the dashes before saving the input.
 
 - **File:** [SSNWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/SSNWidget.jsx)
 - **Usage:** In the `uiSchema`, specify `'ui:widget': SSNWidget` for the given field.
 
-## `TextWidget`
+## TextWidget
 
 Renders a `<input>` HTML element, and is the default widget for data of `type: 'string'`.
 
 - **File:** [TextWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/TextWidget.jsx)
 - **Usage:** Usually the `TextWidget` is not specified directly in the `uiSchema` because it renders by default for a schema that specifies `type: 'string'`.
 
-## `YesNoWidget`
+## YesNoWidget
 
 Renders two radio buttons, one with a value of "Yes" and one with a value of "No".
 
