--- a/packages/documentation/src/pages/forms/available-widgets.mdx
+++ b/packages/documentation/src/pages/forms/available-widgets.mdx
@@ -4,7 +4,7 @@ title: Widgets
 
 # Widgets
 
-Widgets are React components that return specific form elements. Set these widgets in a config file while building your form.
+Widgets are React components that return specific form elements. Set these widgets in a config file while building your form. The uiSchema 'ui:widget' property tells the form which UI widget should be used to render a field.
 
 Some widgets are associated with particular schema types or formats. There are additional widgets available, but the VA Forms Library uses the definitions they're included in rather than just the field.
 
