--- a/packages/documentation/src/pages/forms/index.mdx
+++ b/packages/documentation/src/pages/forms/index.mdx
@@ -24,15 +24,15 @@ The forms library consists of several different pieces:
 
 ## When to use the forms library
 
-The forms library is best suited for forms that
+The forms library is best suited for forms that:
 
-- are long enough to be organized across multiple pages,
-- have optionally captured or required fields, and
-- require field level or multiple field validation.
+- Are long enough to be organized across multiple pages.
+- Have optionally captured or required fields.
+- Require field level or multiple field validation.
 
-The forms library shouldn't be used when
+The forms library shouldn't be used when:
 
-- the form is simple enough to fit on a single page, or
-- when the user experience doesn't benefit from **all** of the steps documented in the above flow.
+- The form is simple enough to fit on a single page.
+- When the user experience doesn't benefit from **all** of the steps documented in the above flow.
 
-In these cases, it's recommended to either make simple single page form or to deploy a React app that doesn't use the forms library. We have form components available in the formation-react library, which can view [here](/platform).
+In these cases, it's recommended to either make a simple single page form or to deploy a React app that doesn't use the forms library. We have form components available in the formation-react library, which can view [here](/platform).
